# PyZRCSDK

./: .gitignore  LICENSE  README.md
ZRCSDK/Demo/: CMakeLists.txt  README.md
ZRCSDK/Demo/include/: MyZRCSDKApp.h  ZRCSDKSink.h  sinks.h
ZRCSDK/Demo/include/include.old/: README.md
ZRCSDK/Demo/libs/: README.md
ZRCSDK/Demo/src/: MyZRCSDKApp.cpp  main.cpp
ZRCSDK/include/: IMeetingService.h  IPhoneCallService.h  IPreMeetingService.h  ISettingService.h  IZRCSDK.h  IZoomRoomsService.h  ZRCSDKDefines.h  ZRCSDKTypes.h
ZRCSDK/include/ServiceComponents/: IBYODHelper.h  IBreakoutRoomHelper.h  ICameraControlHelper.h  IClosedCaptionHelper.h  IContactHelper.h  IControlSystemHelper.h  IMeetingAudioHelper.h  IMeetingChatHelper.h  IMeetingControlHelper.h  IMeetingListHelper.h  IMeetingReactionEmojiHelper.h  IMeetingReminderHelper.h  IMeetingShareHelper.h  IMeetingVideoHelper.h  IMeetingViewLayoutHelper.h  IMeetingWebinarHelper.h  INDIHelper.h  IParticipantHelper.h  IRecordingHelper.h  IThirdPartyMeetingHelper.h  IVirtualBackgroundHelper.h  IWaitingRoomHelper.h
docs/: ISettingService.SettingService.ast.rb  ISettingService.ZRC.ast.rb  ISettingService.ZRCSDKTypes.ast.rb  ISettingService.py.tree  ISettingService.settingservice.py.tree
playground/: ast.py  cursorkind
source/cpp/: CMakeLists.txt
source/cpp/src/: main.cc
